# example-project

./: .buildinfo  .coverage  .gitignore  README.md  example_project.html  genindex.html  index.html  modules.html  politeness_data.py  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: environment.pickle  example_project.doctree  index.doctree  modules.doctree
.doctrees/notebooks/: example_notebook.doctree
.github/workflows/: docs.yml  documentation.yml  tests.yml
.spyproject/config/backups/: workspace.ini.bak
_modules/: index.html
_modules/example_project/: download_data.html  politeness_data.html
docs/source/: conf.py
docs/source/notebooks/.ipynb_checkpoints/: example_notebook-checkpoint.ipynb
doctrees/: example_project.doctree  modules.doctree
example_project/: download_data.py  expectation.py  politeness_data.py
example_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/.ipynb_checkpoints/: usage_example-checkpoint.py
html/: example_project.html  search.html
html/_modules/: index.html
html/_modules/example_project/: politeness_data.html
notebooks/: example_notebook.html
tests/: test_download_data.py  test_expectation.py  test_politeness_data.py
