[metadata]
name = example_project
description = First example project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/florence-bockting/example-project
author = Florence Bockting
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
packages = example_project
install_requires =
    numpy >= 1.23
    pandas >= 1.4
    polars >= 0.19.19
    pyarrow >= 11.0.0
    scipy >= 1.8
    seaborn >= 0.11
    matplotlib >= 3.5
    Requests >= 2.31.0
package_dir = .

[options.extras_require]
testing =
    flake8 >= 3.9
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0
    mypy >= 0.910

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1

[options.package_data]
example_project = py.typed

[flake8]
max-line-length = 120